<resources>
    <string name="app_name">DigiMaria</string>
    <string name="the_app_that_let_s_you_n_learn_new_things_in_a_better_way">The app that lets you \n learn new things in a better way</string>
    <string name="image_title">Image Title</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="google_login">Google Login</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="cap_login">LOGIN</string>
    <string name="new_user_resister_here">New User - Register Here</string>
    <string name="search">Search…</string>
    <string name="welcome">Welcome to DigiMaria</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="kg_series">Kg Series</string>
    <string name="science">Science</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="computer_science">Computer Science</string>
    <string name="english">English</string>
    <string name="social_science">Social Science</string>
    <string name="bookname">Aspen Books</string>
    <string name="english_class_1">English | Class 1</string>
    <string name="unbox_spacing">Unbox Space</string>
    <string name="our_books">Our Books</string>
    <string name="profile">Profile</string>
    <string name="enter_your_licence_key">Enter Your Licence Key</string>
    <string name="_0000">0000</string>
    <string name="kg_student">This is only for KG Student</string>
    <string name="redeem_key">Redeem Key</string>
    <string name="fill_licence_key_to_validate">Fill Licence Key to Validate</string>
    <string name="facebook_app_id">2548720572113677</string>
    <string name="fb_login_protocol_scheme">fb2548720572113677</string>
    <string name="server_client_id" translatable="false">169315781044-h4iipdrndq2eitm1lhd00l6936u0v7ea.apps.googleusercontent.com</string>
    <string name="content">Every child is curious about the world around them. In their curiosity, there
are no subjects, lessons or structures. It is an unparalleled wonder about
everything they see, hear and experience. These books attempt to satisfy that
curiosity in children while structuring the information at the same time. This
structure will help the child remember, recollect and assimilate what they
learn easily. The process of assimilation is of paramount importance as it
ensures that the learning process is a continuous one. Every piece of
information the child comes across in the future is linked
to what they know making them understand the bigger picture of
life with a clarity that will enable them to think, imagine and help
create a better world. The book is well illustrated to demonstrate the
context of the lessons learnt and the illustrations are designed in such
a way that the child can easily relate to them. We hope that this
book, in addition to empowering our children, will also imbibe in our
readers a thirst for knowledge and learning.</string>
    <string name="digital_contents">Digital Contents</string>
    <string name="flip_book">Flipbook</string>
    <string name="animation_video">Animation Video</string>
    <string name="activity">Activity</string>
    <string name="_00">00</string>
    <string name="book">Book</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>
    <string name="_81">81</string>
    <string name="a">a</string>
    <string name="a_cap">A</string>
    <string name="b">b</string>
    <string name="b_cap">B</string>
    <string name="c">c</string>
    <string name="c_cap">C</string>
    <string name="d">d</string>
    <string name="d_cap">D</string>
    <string name="e">e</string>
    <string name="e_cap">E</string>
    <string name="f">f</string>
    <string name="f_cap">F</string>
    <string name="g">g</string>
    <string name="g_cap">G</string>
    <string name="h">h</string>
    <string name="h_cap">H</string>
    <string name="i">i</string>
    <string name="cap_i">I</string>
    <string name="j">j</string>
    <string name="j_cap">J</string>
    <string name="k">k</string>
    <string name="k_cap">K</string>
    <string name="l">l</string>
    <string name="l_cap">L</string>
    <string name="m">m</string>
    <string name="m_cap">M</string>
    <string name="n">n</string>
    <string name="n_cap">N</string>
    <string name="o">o</string>
    <string name="o_cap">O</string>
    <string name="p">p</string>
    <string name="p_cap">P</string>
    <string name="q">q</string>
    <string name="q_cap">Q</string>
    <string name="r">r</string>
    <string name="r_cap">R</string>
    <string name="s">s</string>
    <string name="s_cap">S</string>
    <string name="t">t</string>
    <string name="t_cap">T</string>
    <string name="u">u</string>
    <string name="u_cap">U</string>
    <string name="v">v</string>
    <string name="v_cap">V</string>
    <string name="w">w</string>
    <string name="w_cap">W</string>
    <string name="x">x</string>
    <string name="x_cap">X</string>
    <string name="y">y</string>
    <string name="y_cap">Y</string>
    <string name="z">z</string>
    <string name="z_cap">Z</string>
    <string name="honey_help">Honey Help</string>
    <string name="book_list">Book List</string>
    <string name="help_bee">Help Bee</string>
    <string name="help_frog">Help Frog</string>
    <string name="help_chick">Help Chick</string>
    <string name="match_small_and_caps">Match Small and Caps</string>
    <string name="animals_first_letter">Animals First Letter</string>
    <string name="notification">Notification</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="mobile_number">Mobile number</string>
    <string name="cover_picture">Cover Picture</string>
    <string name="image_view_for_book">Image View for Book</string>
    <string name="of">/</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="go_to_page">Go To Page</string>
    <string name="literacy">Literacy</string>
    <string name="take_me_to_activity">Take me to Activity</string>
    <string name="numeracy">Numeracy</string>
    <string name="general_awarness">General Awareness</string>
    <string name="match_the_numbers">Match the numbers</string>
    <string name="find_tail">Find Tail</string>
    <string name="match_butterfly">Match Butterfly</string>
    <string name="collect_apple">Collect Apple</string>
    <string name="feed_dog">Feed Cat</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="healthy_foods">Healthy Foods</string>
    <string name="help_spider">Help Spider</string>
    <string name="what_next">What next?</string>
    <string name="match_animal_legs">Match Animal Legs</string>
    <string name="match_items">Match Items</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="the_page_you_requested_in_not_displayed">The Page You Requested in Not Displayed</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="kindly_check_your_connection_and_try_again">Kindly Check Your Connection and Try Again</string>
    <string name="retry">Retry</string>
    <string name="go_to_video">Go to Videos</string>
    <string name="ar_scanner">Page Scanner</string>
    <string name="stay_tuned">Stay Tuned</string>
    <string name="we_cant_make_you_to_wait_for_long_time">We cannot make you to wait for long time</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="student_name">Student name</string>
    <string name="cook">cook</string>
    <string name="exercise">exercise</string>
    <string name="brush">brush</string>
    <string name="play">play</string>
    <string name="read">read</string>
    <string name="climb">climb</string>
    <string name="funwithcolors">Fun with colors</string>
    <string name="soundon">Sound on</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="run">Run</string>
    <string name="walk">Walk</string>
    <string name="eat">Eat</string>
    <string name="sing">Sing</string>
    <string name="write">Write</string>
    <string name="drink">Drink</string>
    <string name="jump">Jump</string>
    <string name="dance">Dance</string>
    <string name="blue">Blue</string>
    <string name="jn1q1">1. Which cube is above the green cube?</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="jn1q2">2. Which cube is below the orange cube?</string>
    <string name="jn1q3">3. Which cube is in the middle oƒ blue and red cubes?</string>
    <string name="jn1q4">4. Which cube is below the green cube?</string>
    <string name="jn5q1">1. I have no corners. Can you guess my name by looking at the ƒollowing objects?</string>
    <string name="jn5q2">2. I have three sides and three corners. Guess my name by looking at these objects.</string>
    <string name="jn5q3">3. I have ƒour equal sides with ƒour corners. Can you tell who am I?</string>
    <string name="jn5q4">4. I have two small and two big sides with ƒour corners. Look at the shape oƒ the ƒollowing objects and guess my name.</string>
    <string name="thirteen">Thirteen</string>
    <string name="fifteen">Fifteen</string>
    <string name="nineteen">Nineteen</string>
    <string name="eighteen">Eighteen</string>
    <string name="sixteen">Sixteen</string>
    <string name="flash_cards">Flash Card</string>
    <string name="slide_show">Slideshow</string>
</resources>