<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.mainprocess.BookLanding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/header" />

            <ImageView
                android:id="@+id/landing_cover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/oneseventy"
                android:src="@drawable/book"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cover_picture" />

            <TextView
                android:id="@+id/landing_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unbox_spacing"
                android:layout_margin="@dimen/twenty"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/twenty"/>

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/book_content"
                android:layout_marginRight="@dimen/twenty"
                android:layout_marginLeft="@dimen/twenty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:trimExpandedText="Read more"
                app:trimCollapsedText="Read Less"
                app:trimMode="trimModeLength"
                app:trimLines="6"
                app:colorClickableText="@android:color/holo_blue_light"
                android:text="@string/content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digital_contents"
                android:layout_margin="@dimen/twenty"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/twenty"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/flipbook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty"
                app:cardCornerRadius="@dimen/twenty"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_marginRight="@dimen/twenty"
                android:layout_marginLeft="@dimen/twenty">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/flip_book"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/twenty"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/animated_video"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty"
                app:cardCornerRadius="@dimen/twenty"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginRight="@dimen/twenty"
                android:layout_marginLeft="@dimen/twenty">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/animation_video"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/twenty"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/activities"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty"
                app:cardCornerRadius="@dimen/twenty"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginBottom="@dimen/twenty"
                android:layout_marginRight="@dimen/twenty"
                android:layout_marginLeft="@dimen/twenty">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/activity"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/twenty"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/funwithcolor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty"
                app:cardCornerRadius="@dimen/twenty"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/twenty"
                android:layout_marginRight="@dimen/twenty"
                android:layout_marginLeft="@dimen/twenty">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/funwithcolors"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/twenty"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/flashcards"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty"
                app:cardCornerRadius="@dimen/twenty"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/twenty"
                android:layout_marginRight="@dimen/twenty"
                android:layout_marginLeft="@dimen/twenty">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/flash_cards"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/twenty"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/slideshow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty"
                app:cardCornerRadius="@dimen/twenty"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/twenty"
                android:layout_marginRight="@dimen/twenty"
                android:layout_marginLeft="@dimen/twenty">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/slide_show"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/twenty"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>