<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".activity.nursery.nurseryliteracy.HelpBee">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/header" />

            <RelativeLayout
                android:layout_margin="@dimen/twenty"
                android:layout_width="300sp"
                android:layout_gravity="center"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/honey_img"
                    android:layout_width="300sp"
                    android:layout_height="400sp"
                    android:layout_centerInParent="true"
                    android:hardwareAccelerated="false"
                    android:contentDescription="@string/honey_help" />

                <TextView
                    android:id="@+id/a_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/a"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="130sp"
                    android:layout_marginLeft="79sp"
                    android:layout_marginStart="79sp" />

                <TextView
                    android:id="@+id/b_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/b"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="150sp"
                    android:layout_marginLeft="115sp"
                    android:layout_marginStart="115sp" />

                <TextView
                    android:id="@+id/c_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/c"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="130sp"
                    android:layout_marginLeft="155sp"
                    android:layout_marginStart="155sp" />

                <TextView
                    android:id="@+id/d_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/d"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="150sp"
                    android:layout_marginLeft="192sp"
                    android:layout_marginStart="192sp" />

                <TextView
                    android:id="@+id/e_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/e"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="193sp"
                    android:layout_marginLeft="192sp"
                    android:layout_marginStart="192sp" />

                <TextView
                    android:id="@+id/f_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/f"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="213sp"
                    android:layout_marginLeft="155sp"
                    android:layout_marginStart="155sp" />

                <TextView
                    android:id="@+id/g_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/g"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="235sp"
                    android:layout_marginLeft="118sp"
                    android:layout_marginStart="118sp" />

                <TextView
                    android:id="@+id/h_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/h"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="255sp"
                    android:layout_marginLeft="79sp"
                    android:layout_marginStart="79sp" />

                <TextView
                    android:id="@+id/i_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/i"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="300sp"
                    android:layout_marginLeft="79sp"
                    android:layout_marginStart="79sp" />

                <TextView
                    android:id="@+id/j_id"
                    android:layout_width="@dimen/forty"
                    android:layout_height="@dimen/forty"
                    android:background="@drawable/hexagon"
                    android:text="@string/j"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/thirty"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="320sp"
                    android:layout_marginLeft="118sp"
                    android:layout_marginStart="118sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/help_bee"
                        android:layout_width="@dimen/onethirty"
                        android:layout_margin="@dimen/twenty"
                        android:layout_gravity="left"
                        android:layout_height="@dimen/fortyfive"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="@dimen/twenty">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/backwhite"
                                android:layout_marginLeft="@dimen/ten"
                                android:layout_marginStart="@dimen/ten"
                                android:layout_gravity="center_vertical"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:gravity="center"
                                android:layout_height="match_parent"
                                android:text="@string/back"
                                android:textColor="@android:color/white"
                                android:layout_marginLeft="@dimen/ten"
                                android:layout_marginStart="@dimen/ten"
                                android:layout_gravity="center"
                                android:textStyle="bold"
                                android:textSize="@dimen/twenty"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/help_frog"
                        android:layout_width="@dimen/onethirty"
                        android:layout_margin="@dimen/twenty"
                        android:layout_gravity="right"
                        android:layout_height="@dimen/fortyfive"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="@dimen/twenty">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/next"
                                android:gravity="center"
                                android:textColor="@android:color/white"
                                android:layout_gravity="center"
                                android:layout_marginEnd="@dimen/thirtyfive"
                                android:textStyle="bold"
                                android:textSize="@dimen/twenty"/>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/forwardwhite"
                                android:layout_marginStart="-35sp"
                                android:layout_gravity="center_vertical"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>