<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_went"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nonet"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twentyfive"
            android:text="@string/no_internet_connection"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twentyfive"
            android:text="@string/kindly_check_your_connection_and_try_again"
            android:textColor="@color/black"
            android:textSize="@dimen/fifteen" />

        <androidx.cardview.widget.CardView
            android:id="@+id/home_no"
            android:layout_marginTop="@dimen/twenty"
            android:layout_gravity="center"
            android:layout_width="@dimen/hundred"
            card_view:cardElevation="0dp"
            android:layout_height="@dimen/fifty"
            app:cardCornerRadius="@dimen/twenty">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/retry"
                android:textSize="@dimen/twenty"
                android:textColor="@color/black"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>